no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -21,7 +21,7 @@ Todo:
 PURPOSE ==>                                     #Execute JavaScript code server-side
                                                 #Based on Chrome JavaScript engine V8
 
-VERSION ==>                                     #15.0.1 (current), 14.15.0 (active LTS), 12.19.0 (active LTS), 10.23.0 (maintenance)
+VERSION ==>                                     #15.3.0 (current), 14.15.0 (active LTS), 12.19.0 (active LTS), 10.23.0 (maintenance)
                                                 #Branches:
                                                 #  - "current": latest major version. New one every 0.5 years
                                                 #  - LTS: every even-numbered version
@@ -292,7 +292,8 @@ SYSTEMERROR.info                                #Extra info, if any
 new EventEmitter([OPTS])                        #Base class of all objects receiving events
                                                 #'EVENT' can be a SYM
                                                 #Events are emitted synchronously
-EVENTEMITTER.on('EVENT', FUNC)->EVENTEMITTER    #
+EVENTEMITTER.on('EVENT', FUNC[, OPTS])
+ ->EVENTEMITTER                                 #
 EVENTEMITTER.once('EVENT', FUNC)->EVENTEMITTER  #
 EVENTEMITTER.prepend[Once]Listener(...)         #Like on[ce](...) but adds to beginning of listeners list, not end
 once(EVENTEMITTER|EVENTTARGET, 'EVENT'[, OPTS]) #Like EVENTEMITTER.once() but using PROMISE:
@@ -300,8 +301,9 @@ once(EVENTEMITTER|EVENTTARGET, 'EVENT'[, OPTS]) #Like EVENTEMITTER.once() but us
                                                 #  - rejected with VAL on emit('error', VAL) (unless 'EVENT' is 'error' itself)
                                          15.0.0*#OPTS:
                                          15.0.0*#  - signal ABORT_SIGNAL
-on(EVENTEMITTER|EVENTTARGET, 'EVENT')
- ->ASYNC_ITERATOR                            12*#Same but for EVENTEMITTER.on(), as a an ASYNC_ITERATOR
+on(EVENTEMITTER|EVENTTARGET, 'EVENT'[,OPTS]) 12*#Same but for EVENTEMITTER.on(), as a an ASYNC_ITERATOR
+ ->ASYNC_ITERATOR                        15.0.0*#OPTS:
+                                         15.0.0*#  - signal ABORT_SIGNAL
 EVENTEMITTER.off|removeListener('EVENT', FUNC)
   ->EVENTEMITTER                                #
 EVENTEMITTER.removeAllListeners(['EVENT'])
@@ -311,9 +313,12 @@ EVENTEMITTER.emit('EVENT'[, ...])->BOOL         #True if there were listeners
 
 EVENTEMITTER.listeners(EVENT)->FUNC_ARR         #
 EVENTEMITTER.rawListeners(EVENT)->FUNC_ARR      #Same but also with what Node.js adds, e.g. once() wrapper
+getEventListeners(EVENTEMITTER, 'EVENT')
+ ->FUNC_ARR                              15.2.0*#Same as EVENTEMITTER.listeners()
 EVENTEMITTER.listenerCount(EVENT)->NUM          #Slightly faster than EVENTEMITTER.listeners(STR).length
 EVENTEMITTER.eventNames()->'EVENT'_ARR          #
 EVENTEMITTER.setMaxListeners(NUM)->EVENTEMITTER #0 for unlim. Beyond max, does not stops adding listeners, only print warning.
+setMaxListeners(NUM, EVENT_EMITTER...)   15.4.0*#Same
 EVENTEMITTER.getMaxListeners()->NUM             #
 EVENTEMITTER.defaultMaxListeners                #10
 EVENTEMITTER.on                                 #Event when a new event handler is added or removed.
@@ -338,10 +343,33 @@ EventTarget                                  14*#Like DOM except:
                                              14*#  - cannot add same listener several times to same OBJ
                                          15.0.0*#Exposed globally
 NodeEventTarget                              14*#Child of EventTarget that mixes most Node.js EventEmitter properties|methods:
-                                             14*#  - only on|once|off|removeListener|removeAllListeners|listeners|listenerCount|eventNames|*etMaxListeners|defaultMaxListeners
+                                             14*#  - only on|once|off|removeListener|removeAllListeners|listeners|getEventListeners|
+                                             14*#    listenerCount|eventNames|*etMaxListeners|defaultMaxListeners
                                              14*#Not exposed globally
 Event                                        14*#Like DOM.
                                          15.0.0*#Exposed globally
+
+
+                                             /=+===============================+=\
+                                            /  :                               :  \
+                                            )==:      DIAGNOTICS_CHANNEL       :==(
+                                            \  :_______________________________:  /
+                                             \=+===============================+=/
+
+
+CHANNEL_NAME                             15.1.0*#STR|SYM
+                                         15.1.0*#Should be namespaced since this is global
+
+channel(CHANNEL_NAME)->CHANNEL           15.1.0*#Like EVENT_EMITTER except:
+                                         15.1.0*#  - fewer methods
+                                         15.1.0*#  - consumer interacts with it by its name instead of by using the object iself
+                                         15.1.0*#  - meant for debugging information
+CHANNEL.publish(MESSAGE)                 15.1.0*#
+CHANNEL.hasSubscribers                   15.1.0*#BOOL
+
+subscribe(FUNC(MESSAGE, CHANNEL_NAME))   15.1.0*#
+unsubscribe(FUNC)                        15.1.0*#
+hasSubscribers(CHANNEL_NAME)->BOOL       15.1.0*#
 
 
                                              /=+===============================+=\
@@ -549,6 +577,7 @@ require.main                                    #Root file (first to have been l
 process.mainModule                              #Same but updated if root file changed at runtime
 MODULE.children                                 #MODULE[_ARR]|null
 
+MODULE.isPreloading                             #BOOL
 MODULE.loaded                                   #False for the first time the file is loaded (i.e. sync)
                                                 #True for async functions
 require('module').builtinModules                #List of system 'MODULE'_ARR (e.g. 'http') including internal ones
@@ -574,7 +603,7 @@ CLI ==>                                         #Not defined: require.main, proc
 
 
 import|export ...                            12*#ES modules
-                                            <14*#Prints an experimental warning
+                                       <12.20.0*#Prints an experimental warning
 import('URI')->PROMISE                       12*#
 
 import ... from 'URI'                        12*#Import from 'URI' not PATH
@@ -900,6 +929,7 @@ OSTREAM.writable                                #BOOL
 OSTREAM.writableObjectMode                   12*#BOOL
 OSTREAM.writableHighWaterMark                   #NUM
 OSTREAM.writableLength                          #NUM. Number of bytes not flushed yet
+OSTREAM.writableNeedDrain                15.2.0*#BOOL. True if buffer is full and 'drain' will be emitted
 OSTREAM.[un]cork()                              #cork() forces buffering to disk, uncork() flushes
                                                 #Can be called several times, in which case uncork() must be done several times.
                                                 #To do when writing a lot of small I/O, to make them all flush at once.
@@ -925,6 +955,7 @@ finished(STREAM[, OPTS], FUNC([ERROR]))         #Call FUNC([ERROR]) when STREAM 
                                                 #  - error BOOL (def: true): use 'error' event
 END-OF-STREAM(...)                             ##Ponyfill for finished() (1.4.4)
 ON-FINISHED(...)                               ##Similar but slightly different, i.e. not preferred (2.3.0)
+addAbortSignal(ABORT_SIGNAL, STREAM)     15.4.0*#Call STREAM.destroy() on ABORT_SIGNAL.abort()
 
 pipeline(SRC[, TRANSFORM...], DEST,             #Like SRC.pipe(TRANSFORM)....pipe(DEST) except:
  FUNC(ERROR, SVAL))->OSTREAM                    #  - has a final FUNC() like finished()
@@ -1080,6 +1111,7 @@ INTERFACE.write(STR[, OBJ])                     #Prints STR on OSTREAM
                                                 #  - like process.stdout.write(), but as opposed to console.*()
 
 INTERFACE.setPrompt(STR)                        #Change OPTS.prompt (see above)
+INTERFACE.getPrompt()->STR               15.3.0*#
 INTERFACE.prompt([BOOL])                        #Write in beginning of current OSTREAM line the OPTS.prompt
                                                 #If false (def), move cursor back to beginning of line
 
@@ -1742,6 +1774,7 @@ request(['URI'|URI][, OBJ][, FUNC(REQ)])        #Sends a HTTP request.
                                                 #  - lookup(...) (def: DNS.lookup(...))
                                              12*#  - maxHeaderSize NUM: see --max-http-header-size
                                              12*#  - highWaterMark NUM
+                                         15.3.0*#  - signal ABORT_SIGNAL
                                                 #FUNC is 'response' event handler.
 get(['URI'|URI][, OBJ][, FUNC(REQ)])            #Same but use method "GET" and automatically calls OSTREAM.end()
 CLIENTREQ.on("socket", FUNC(TCPSOCKET))         #Fired when socket is created to send the request.
@@ -1930,8 +1963,8 @@ RESOLVER.cancel()                               #Cancel all current resolve*|rev
 RESOLVER.setLocalAddress
  (['IPv4'][, 'IPv6'])                    15.1.0*#Changes which address is the local one (def: '0.0.0.0' and '::0')
 
-promises.*(...)                                 #Like DNS.*(...) except returns PROMISE and no RESOLVER.cancel()
-                                                #No more experimental warning
+promises.*(...)                                 #Like DNS.*(...) except returns PROMISE
+                                        <15.3.0*#and no RESOLVER.cancel()
 require('dns/promises')                  15.0.0*#Same as DNS.promises
 
 
@@ -2057,6 +2090,7 @@ format(PATH_OBJ)->'PATH'                        #Inverse
 sep                                             #OS-specific path delimiter "/" or "\"
 delimiter                                       #OS-specific ENVVAR PATH delimiter ":" or ";"
 posix|win32.*                                   #Like PATH, but always behave like if on those platforms
+require('path/posix|win32')              15.3.0*#Same
 toNamespacedPath('PATH')->'PATH'                #Returns namespaced path '\\?\LETTER:\'.
                                                 #Noop unless on Windows.
 
@@ -2122,6 +2156,9 @@ access(PATH[, NUM], FUNC(ERROR))                #Checks if has permission, accor
                                              12*#  - a|m|ctime|birthtimeNs NUM (only if OPTS.bigint true)
                                                 #OPTS:
                                                 #  - bigint BOOL (def: false): make FSSTAT.* BIGINT instead of UINT
+                                         15.3.0*#  - throwIfNoEntry BOOL:
+                                         15.3.0*#     - when ENOENT, if true (def) throws, if false return undefined
+                                         15.3.0*#     - only with [l]statSync()
 
 symlink(PATH, PATH2[, STR], FUNC(ERROR))        #STR is 'dir', 'file' or 'junction' (Windows only)
                                             <12*#Def: 'file'
@@ -2234,6 +2271,7 @@ readFile                                        #Easier way than using open() an
 (PATH|FD_INT, [OPTS, ]FUNC(ERROR, BUFFER|STR))  #OPTS:
                                                 #  - encoding 'ENCODING' (def: null, i.e. returns BUFFER, otherwise returns STR)
                                                 #  - flag STR (def: "r")
+                                         15.2.0*#  - signal ABORT_SIGNAL
                                                 #Prefer createReadStream(...).pipe(OSTREAM)
 write|appendFile(FILENAME|UINT,                 #OPTS has same members but also mode MODE_INT (def: 0666), and default encoding is 'utf8'
 [STDBUFFER,] [OPTS, ] FUNC(ERROR))              #Def flag is "w|a"
@@ -2243,9 +2281,11 @@ createReadStream(PATH[, OPTS])->ISTREAM         #Preferred over readFile().
                                                 #    (readFile())
                                                 #  - can use IOSTREAM as modular transforms functions (like Unix commands)
                                                 #OPTS has members:
-                                                #  - flags STR (def: "r")
                                                 #  - encoding 'ENCODING' (def: null)
+                                                #  - flags STR (def: "r")
+                                         15.2.0*#  - signal ABORT_SIGNAL
                                                 #  - fd FD_INT (def: null)
+                                         15.4.0*#    or FILE_HANDLE
                                                 #  - mode NUM (def: 0666) (see above for Windows behavior)
                                                 #  - autoClose BOOL (def: true): close the file descriptor on error|end event
                                              12*#  - emitClose BOOL (def: false): emit a 'close' event when destroyed
@@ -2300,6 +2340,7 @@ require('fs/promises')                       14*#Same
 FILE_HANDLE                                     #Abstraction of a file descriptor, with automatic closing on FS PROMISE rejection
 FILE_HANDLE.fd                                  #FD_INT
 FILE_HANDLE.FUNC(...)                           #Same as FSP.[f]FUNC(FILE_HANDLE, ...)
+FILE_HANDLE.on('close', FUNC())          15.4.0*#
 
 
                                              /=+===============================+=\
@@ -2671,6 +2712,7 @@ spawn(STR[, STR2_ARR][, OPTS])->CHILDPROCESS    #Creates and runs a CHILDPROCESS
                                                 #     - if detached true and in terminal:
                                                 #        - do not create new terminal window
                                                 #        - but cannot use CTRL-C
+                                         15.5.0*#  - signal ABORT_SIGNAL
                                                 #Use CHILDPROCESS.ref(), so needs to use unref() if program can exit while CHILDPROCESS is running.
 fork(STR[, STR2_ARR][, OPTS])->CHILD_PROCESS    #Same as spawn() but using 'node STR ...STR2_ARR'
                                                 #OPTS:
@@ -3400,8 +3442,8 @@ PERFOBSERVER                                    #     - 'timing' PERFORMANCETIMI
                                                 #     - if false (def), fire listener callbacks sync
                                                 #     - if true, use setImmediate()
                                                 #  - PERFOBSERVER is an ASYNCRESOURCE
-WORKER.performance                              #Same but inside a WORKER
-                                                #Only has eventLoopUtilization()
+WORKER.performance                       15.1.0*#Same but inside a WORKER
+                                         15.1.0*#Only has eventLoopUtilization()
 
 DOMTIMESTAMP                                    #Still milliseconds unit, but precision (on an average machine) is:
                                                 #  - if DOMGLOBALTIME: 1µs
@@ -3593,6 +3635,7 @@ inherits(TYPE_FUNC, TYPEPARENT_FUNC)            #Makes TYPE inherits from TYPEPA
                                                 #members with TYPE.prototype.VAR = VAL
 
 
+require('util/types')                    15.3.0*#
 types.isRegExp(VAL)->BOOL                       #True if REGEXP
 types.isDate(VAL)->BOOL                         #True if DATE
 types.isPromise(VAL)->BOOL                      #True if PROMISE (not PROMISABLE)
@@ -3687,6 +3730,7 @@ process.report.getReport([ERROR])->OBJ       11*#Get debugging information.
                                              11*#     - is_active '0|1'
                                              11*#     - is_referenced '0|1'
                                              11*#     - address 'NUM'
+                                         15.3.0*#     - loopIdleTimeSeconds NUM
                                              11*#     - any type-specific properties
                                              11*#  - environmentVariables OBJ: process.env
                                              11*#  - [uvthreads]resourceUsage:
