no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -6,7 +6,7 @@
 
 
 Todo:
-  - document CRYPTO.generateKey[Sync](), CRYPTO.getCipherInfo(), hkdf[Sync](), webcrypto
+  - document CRYPTO.generateKey[Sync](), CRYPTO.getCipherInfo(), hkdf[Sync](), webcrypto, X509Certificate
   - document http/2
   - document quic (including NET.createQuicSocket())
 
@@ -21,7 +21,7 @@ Todo:
 PURPOSE ==>                                     #Execute JavaScript code server-side
                                                 #Based on Chrome JavaScript engine V8
 
-VERSION ==>                                     #15.3.0 (current), 14.15.0 (active LTS), 12.19.0 (active LTS), 10.23.0 (maintenance)
+VERSION ==>                                     #15.6.0 (current), 14.15.0 (active LTS), 12.19.0 (active LTS), 10.23.0 (maintenance)
                                                 #Branches:
                                                 #  - "current": latest major version. New one every 0.5 years
                                                 #  - LTS: every even-numbered version
@@ -80,12 +80,13 @@ process.nextTick(FUNC()[, ...])                 #Add a new microtask (see JavaSc
 
 new AbortController()                    15.0.0*#Like DOM
 new AbortSignal()                        15.0.0*#Like DOM. Child of EventTarget
+                                         15.0.0*#Most OPTS.signal used in this doc throw|reject with AbortError
 
 require('timers/promises')               15.0.0*#
 setTimeout(NUM[, VAL[, OPTS]])->PROMISE  15.0.0*#Resolves to VAL (def: undefined) after NUMms.
 setImmediate([VAL[, OPTS]])->PROMISE     15.0.0*#OPTS:
                                          15.0.0*#  - ref BOOL (def: true): yield macrotask
-                                         15.0.0*#  - signal ABORT_SIGNAL: on 'abort', reject PROMISE with AbortError
+                                         15.0.0*#  - signal ABORT_SIGNAL
                                          15.0.0*#Those OPTS are available to promisify(setTimeout|setImmediate) too
 
 
@@ -577,7 +578,7 @@ require.main                                    #Root file (first to have been l
 process.mainModule                              #Same but updated if root file changed at runtime
 MODULE.children                                 #MODULE[_ARR]|null
 
-MODULE.isPreloading                             #BOOL
+MODULE.isPreloading                             #BOOL. True when inside node -r
 MODULE.loaded                                   #False for the first time the file is loaded (i.e. sync)
                                                 #True for async functions
 require('module').builtinModules                #List of system 'MODULE'_ARR (e.g. 'http') including internal ones
@@ -874,6 +875,7 @@ new STREAM.Readable([OBJ])                      #OBJ:
                                                 #     - on ISTREAM: data available for read but not read yet
                                                 #     - on OSTREAM: data not flushed yet
                                                 #     - if buffer full, waits
+                                         15.5.0*#  - signal ABORT_SIGNAL
 ISTREAM.on("readable", FUNC())                  #New chunks available, or just before "end"
 ISTREAM.on("data", FUNC(SVAL))                  #Each new chunk available. Firing FUNC() consumes that chunk.
                                                 #Not fired if ISTREAM is empty
@@ -913,8 +915,7 @@ OSTREAM ==>                                     #Output stream. Actually called 
 STREAM.Writable([OBJ])                          #Constructor for OSTREAM. OBJ members are:
                                                 #  - decodeStrings BOOL: if true (def), decodes to BUFFER before
                                                 #    calling underlying OSTREAM._write()
-                                                #  - objectMode BOOL: see above
-                                                #  - highWaterMark NUM: see above
+                                                #  - objectMode|highWaterMark|signal: see above
 OSTREAM.write(SVAL[, 'ENCODING'[,FUNC()]])->BOOL#Writes chunks.
                                                 #FUNC() is fired when buffered + flushed.
                                                 #BOOL:
@@ -1321,6 +1322,7 @@ TCPSERVER.listen(OBJ[, FUNC()])                 #Same with OBJ:
                                                 #  - port, host, path, backlog UINT
                                                 #  - readableAll|writableAll BOOL (def: false): file permission for the socket
                                              11*#  - ipv6Only BOOL (def: false)
+                                         15.6.0*#  - signal ABORT_SIGNAL
 TCPSERVER.on("listening", FUNC())               #Fired when listen() is called.
 TCPSERVER.listening                             #BOOL
 TCPSERVER.close([FUNC()])                       #Stops the server from accepting new connections:
@@ -1794,7 +1796,7 @@ CLIENTREQ.destroy()                             #
 CLIENTREQ.flushHeaders()                        #Send request headers right away, even if request body not ready for send yet
 
 AGENT                                           #Socket pools manager for CLIENTREQ (not REQ|RES)
-new AGENT(OBJ)                                  #OBJ is:
+new Agent(OBJ)                                  #OBJ is:
                                                 #  - maxSockets NUM (def: Infinity):
                                                 #     - max busy + free sockets per host.
                                                 #     - increasing just affect pooling, i.e. more memory used but faster
@@ -1805,7 +1807,8 @@ new AGENT(OBJ)                                  #OBJ is:
                                                 #  - keepAlive BOOL (def: true): keep free sockets opened for use
                                                 #  - keepAliveMsecs NUM (def: 1000)
                                                 #  - timeout NUM
-                                             14*#  - scheduling 'fifo' (def) or 'filo':
+                                             14*#  - scheduling 'fifo' or 'filo' (def):
+                                        <15.6.0*#     - def was 'fifo'
                                              14*#     - FIFO keep number of open sockets as high as possible, i.e. good for speed
                                              14*#     - FILO keep it as low as possible, i.e. good for memory
                                              14*#     - FILO lowers risk of re-using sockets closed by server due to inactivity
@@ -2631,6 +2634,7 @@ memoryUsage()->OBJ                              #OBJ
                                                 #  - heapUsed|heapTotal NUM: subset of rss for heap
                                                 #  - external NUM: subset of heap for JavaScript objects stored in C++
                                              12*#  - arrayBuffers NUM: subset of external for [SHARED_]ARR_BUFFER
+memoryUsage.rss()->NUM                   15.6.0*#Like memoryUsage().rss, but faster
 cpuUsage([OBJ])->OBJ                            #OBJ: user|system NUM (time usage, in microseconds)
                                                 #If OBJ passed, is difference.
 uptime()                                        #
@@ -2673,6 +2677,8 @@ spawn(STR[, STR2_ARR][, OPTS])->CHILDPROCESS    #Creates and runs a CHILDPROCESS
                                                 #           - anonymous pipe
                                                 #           - write-only (parent to child) if stdin, read-only (child to parent) otherwise
                                                 #           - enable CHILDPROCESS.stdio[FD_INT]|stdin|out|err
+                                         15.6.0*#        - "overlapped"
+                                         15.6.0*#           - same as "pipe" except, on Windows, use sync I/O instead of async
                                                 #        - "ipc":
                                                 #           - bidirectional anonymous pipe
                                                 #           - enable CHILDPROCESS.send()
@@ -2981,6 +2987,13 @@ MESSAGEPORT.on('messageerror', FUNC(ERROR))
 
 WORKER_THREADS.parentPort                       #Default MESSAGEPORT available in every worker.
                                                 #null in parent
+
+new BroadcastChannel('CHANNEL_NAME')     15.4.0*#One-to-many message passing from child|parent to child|parent
+BROADCAST_CHANNEL.postMessage(VAL)
+BROADCAST_CHANNEL.on('message[error]', FUNC)
+BROADCAST_CHANNEL.close()
+BROADCAST_CHANNEL.[un]ref()              15.4.0*#Like MESSAGEPORT.*
+
 
                                              /=+===============================+=\
                                             /  :                               :  \
@@ -3323,6 +3336,21 @@ randomFill[Sync](TDBUFFER[, NUM[, NUM2]]        #Like randomBytes() but by f
 randomInt
  ([UINT, ]UINT2[, FUNC(ERROR, UINT3)])  12.19.0*#Generates random UINT3 from UINT (included, def: 0) to UINT2 (excluded)
 randomInt([UINT, ]UINT2)->UINT3         12.19.0*#Is cryptographically secure (e.g. from /dev/random)
+randomUUID([OPTS])->STR                  15.6.0*#Returns UUIDv4. Cryptographically secure (e.g. from /dev/random)
+                                         15.6.0*#OPTS:
+                                         15.6.0*#  - disableEntropyCache BOOL: if false (def), cache 128 UUIDs in advance
+
+--secure-heap=NUM                        15.6.0*#Randomize the heap used by several CRYPTO.* methods
+                                         15.6.0*#Must be power of 2
+                                         15.6.0*#Noop on Windows
+--secure-heap-min=NUM                    15.6.0*#Minimum allocation when using --secure-heap
+                                         15.6.0*#Must be power of 2
+                                         15.6.0*#Def: 64
+secureHeapUsed()->OBJ                    15.6.0*#OBJ:
+                                         15.6.0*#  - total NUM: passed to --secure-heap
+                                         15.6.0*#  - min NUM: passed to --secure-heap-min
+                                         15.6.0*#  - used NUM: how many bytes used
+                                         15.6.0*#  - utilization NUM: used/total
 
 getFips()->BOOL                                 #True if Node has been:
                                                 #   - built to be FIPS-compliant (by def, is not)
