no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -1716,6 +1716,7 @@ RES                                             #OSTREAM, writing the body:
                                                 #  - Date [S] (if RES.sendDate true (def))
                                                 #  - Connection: keep-alive [S]
                                                 #  - Transfer-Encoding: chunked [S]
+RES.req                                  15.7.0*#REQ
 RES.on("close", FUNC())                         #Fired if closed before end() was called
 RES.headersSent                                 #True if headers are sent
 RES.writableEnded                            12*#Same
@@ -1892,6 +1893,8 @@ domainToUnicode(STR)->STR2                      #IDN from|to Punycode
 fileURLToPath(URI|'URI')->'PATH'                #Conversion between file://* and 'PATH' considering:
 pathToFileURL('PATH')->URI                      #  - 'PATH' is OS-specific
                                                 #  - URI requires percent encoding, but not 'PATH'
+
+urlToHttpOptions(URI)->OBJ               15.7.0*#Returns OBJ to use with HTTP[S].request()
 
 
                                              /=+===============================+=\
@@ -3272,6 +3275,11 @@ KEY.type                                     11*#'public|private' (if async) or 
 KEY.asymmetricKeyType                        11*#'rsa', 'dsa', 'ec', (if sym key) undefined,
                                              12*#'ed25519', 'ed448', 'x25519', 'x448', 'rsa-pss'
                                              12*#'dh'
+KEY.asymmetricKeyDetails()->OBJ          15.7.0*#OBJ:
+                                         15.7.0*#  - modulusLength NUM: key size in bits (RSA|DSA)
+                                         15.7.0*#  - publicExponent BIGINT (RSA)
+                                         15.7.0*#  - divisorLength NUM (DSA)
+                                         15.7.0*#  - namedCurve STR (EC)
 KEY.symmetricSize                            11*#Byte length NUM. undefined if async
 KEY.export([OPTS])->SBUFFER                  11*#OPTS (if async):
                                              11*#  - type, format, passphrase: like createPrivate|PublicKey()
@@ -3565,6 +3573,7 @@ ICU DATA                                        #I18n dataset used by:
 process.versions.icu                            #'VERSION'|undefined
 
 ENCODING                                        #Either: ascii, utf8 (def), urf16le|ucs2, base64, hex, binary (actually latin-1)
+                                         15.7.0*#or base64url
                                                 #For TEXTDECODER|TEXTENCODER, it is different (see DOM doc), and depends on ICU:
                                                 #  - always: 'utf-8' (def), 'utf-16le'
                                                 #  - if 'small|system-icu': 'utf-16be'
