no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -850,6 +850,12 @@ BUFFER.*int*(...)                       12.19.0*#Like BUFFER.*Int*(...)
 
 BUFFER.swap16|32|64()->BUFFER                   #Swaps every couple of 1|2|4 bytes. Return value is reference
 
+new Blob(...)                            15.7.0*#Like DOM except:
+                                         15.7.0*#  - new Blob():
+                                         15.7.0*#     - no OPTS.endings
+                                         15.7.0*#     - OPTS.encoding 'ENCODING' (def: 'utf8')
+                                         15.7.0*#  - no BLOB.stream()
+
 
                                              /=+===============================+=\
                                             /  :                               :  \
@@ -2268,6 +2274,7 @@ read(FD_INT[, OPTS],FUNC(ERROR,INT2,BUFFER)) 12*#Read INT2 bytes from file FD_IN
                                              12*#  - offset INT (def: 0) (in BUFFER, to write)
                                              12*#  - length INT2 (def: OPTS.buffer.length)
                                              12*#  - position INT3 (def: null) (in file, to read)
+                                         15.7.0*#    or BIGINT
 readv(FD_INT, ARRAYBUFFERVIEW[, INT3]
  FUNC(ERROR, INT4, ARRAYBUFFERVIEW_ARR))     12*#Same but with ARRAYBUFFERVIEW_ARR
 f[data]sync(FD_INT, FUNC(ERROR))                #Flushes to disk
@@ -2962,6 +2969,7 @@ WORKER|MESSAGEPORT.postMessage                  #Like DOM except:
  (VAL[, VAL2_ARR])                              #  - child can only use MESSAGEPORT, not global "postMessage()"
                                                 #  - VAL2:
                                                 #     - can be SHARED_ARRBUFFER
+                                         15.7.0*#     - can be BLOB
                                         12.19.0*#     - can be FILE_HANDLE or crypto KEY
                                                 #     - when MESSAGEPORT, VAL must be MESSAGEPORT
 WORKER|MESSAGEPORT.on('message', FUNC(VAL))     #Like DOM except:
